--- a/webbanpizza/webbanpizza/Views/_ViewImports.cshtml
+++ b/webbanpizza/webbanpizza/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using webbanpizza
-@using webbanpizza.Models
+﻿@using WebBanPizza
+@using WebBanPizza.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
